--- a/discord/.env
+++ b/discord/.env
@@ -1,2 +1,2 @@
 ENV = 'TEST'
-TOKEN = 'NzI4ODIzNTExOTAwMjI1NTU2.XwAABw.wyAyaSuR1Px9ioxLVwyxrU-9U70'
+TOKEN = 'NzI4ODIzNTExOTAwMjI1NTU2.XwAS-g.M8Yj5fpLvgN08AcD67rXaFh8ky41'
